--- a/LAB2/LAB2.csproj
+++ b/LAB2/LAB2.csproj
@@ -47,6 +47,8 @@
     <Compile Include="IPrint.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
+    <Compile Include="Square.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
