LAB3 main commit

--- a/LAB3/LAB3.csproj
+++ b/LAB3/LAB3.csproj
@@ -42,11 +42,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Matrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleList.cs" />
+    <Compile Include="SimpleStack.cs" />
+    <Compile Include="Square.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LAB2\LAB2.csproj">
+      <Project>{86361e48-91f0-4b52-8dbe-9105a2372968}</Project>
+      <Name>LAB2</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
